// ============================================
// Cafe Inn Database Schema
// สร้างจาก SQLAlchemy models
// ใช้กับ https://dbdiagram.io
// ============================================

Table users {
  user_id int [pk, increment]
  username varchar(255) [unique, not null]
  password varchar(255) [not null]
  user_role varchar(20) [not null, note: 'customer, staff, admin']
  is_verified boolean [default: false]
  name varchar(255)
  email varchar(255) [unique]
  tel varchar(20)
  birth_date timestamp
  point int [default: 0]
  reset_password_token varchar(255)
  reset_password_expires timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table products {
  product_id int [pk, increment]
  product_name varchar(255) [not null]
  price int [not null]
  sweetness_options "varchar[]" [note: 'e.g. 0, 25, 50, 75, 100']
  milk_type_options "varchar[]" [note: 'e.g. whole, low-fat, oat, soy']
  type_options "varchar[]" [note: 'e.g. hot, iced, frappe']
  image varchar(255)
}

Table tables {
  table_id int [pk, increment]
  table_number varchar(255) [not null]
  capacity int [not null]
  status varchar(255) [not null, default: 'empty', note: 'empty, onHold, reserved, full']
  last_update timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table reservations {
  reservation_id int [pk, increment]
  customer_id int [not null, ref: > users.user_id]
  staff_id int [ref: > users.user_id]
  table_ids "int[]" [not null, note: 'อ้างอิง table_id หลายโต๊ะ']
  capacity int [not null, note: 'ความจุรวมที่จอง']
  reservation_time timestamp [not null]
  customer_amount int [not null, note: 'จำนวนลูกค้าที่มา']
  reservation_detail varchar(255)
  cancel_detail varchar(255)
  reservation_status varchar(50) [not null, default: 'pending', note: 'pending, accepted, arrive, cancel, finish']
  response_at timestamp
  finish_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table orders {
  order_id int [pk, increment]
  customer_id int [ref: > users.user_id]
  staff_id int [not null, ref: > users.user_id]
  reservation_id int [ref: > reservations.reservation_id]
  table_ids "int[]" [not null, default: '{}', note: '[] = takeaway]
  order_status varchar(50) [not null, default: 'pending', note: 'pending, preparing, ready, completed, cancelled']
  net_price int [not null]
  finish_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.order_id]
  product_id int [not null, ref: > products.product_id]
  quantity int [not null, default: 1]
  sweetness varchar(50) [note: 'ระดับความหวานที่เลือก']
  milk_type varchar(50) [note: 'ชนิดนมที่เลือก']
  product_type varchar(50) [note: 'hot, iced, frappe']
  note text [note: 'comment จากลูกค้า เช่น ขอแยกนมกับกาแฟ']
}